# dagster-pipes-go

./: .gitignore  README.md  TODO.md  context_loader.go  context_loader_test.go  dagster_pipes.go  dagster_pipes_test.go  doc.go  error.go  go.mod  message_writer.go  message_writer_test.go  param_loader.go  param_loader_test.go  pipes.toml  pyproject.toml  types.go
examples/example-pipes/: README.md  pyproject.toml
examples/example-pipes/pipes/: example-pipes  go.mod  main.go
examples/example-pipes/src/example_pipes/defs/: assets.py  resources.py
internal/helper/: helper.go
metadata/: metadata.go
tests/: conftest.py  main.go  test_pipes.py  tests
types/: types.go  types_ext.go
