[project]
name = "dagster-pipes-go"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagster-pipes-tests",
    "pytest>=9.0.1",
]

[tool.uv.sources]
dagster-pipes-tests = { git = "https://github.com/dagster-io/community-integrations.git", subdirectory = "libraries/pipes/tests/dagster-pipes-tests" }
